fix for content layout shift

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -33,6 +33,7 @@
   }
 
   .viewWrapper {
+    display: inline-block;
     width: 100%;
     max-width: 100%;
     min-width: 100%;
